Increment asset version, fix for code sections on mobile/narrow screens, closes #23

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,6 +81,8 @@ pre {
     background-color: #f5f5f5;
     border: 1px solid #cccccc;
     border-radius: 4px;
+    overflow: auto;
+    white-space: pre;
 }
 
 code {
